--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,7 @@ repos:
       - id: mixed-line-ending
         args: ['--fix=lf']
   - repo: https://github.com/psf/black
-    rev: 21.11b1
+    rev: 21.12b0
     hooks:
       - id: black
   - repo: https://github.com/PyCQA/isort
@@ -18,7 +18,7 @@ repos:
     hooks:
       - id: isort
   - repo: https://github.com/commitizen-tools/commitizen
-    rev: master
+    rev: v2.20.3
     hooks:
       - id: commitizen
         stages: [commit-msg]
